Fix z-index

--- a/js/pedigree.css
+++ b/js/pedigree.css
@@ -528,6 +528,7 @@ body {
   border: 1px solid #000;
   border-radius: 2px;
   box-shadow: 0px 0px 10px #666;
+  z-index: 2;
 }
 
 .dialog label div {
